[tool.poetry]
name = "langchain-rag-enhancements"
version = "0.1.0"
description = ""
authors = ["Yuki Oshima <39944763+os1ma@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.305"
openai = "^0.28.1"
python-dotenv = "^1.0.0"
gitpython = "^3.1.37"
tiktoken = "^0.5.1"
faiss-cpu = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[ruff.tool]
select = ["ALL"]
ignore = ["D", "ANN", "ARG", "COM"]
